# fast-forward

./: .gitignore  Cargo.toml  README.md  README.tpl  justfile
.github/workflows/: continuous_integration.yml
benches/: bench_index.rs
examples/: extend_index_tree.rs  one_indexed_list.rs
fast_forward/: Cargo.toml  README.md  README.tpl  justfile
fast_forward/benches/: bench_index.rs
fast_forward/examples/: access_rights.rs  extend_index_tree.rs  one_indexed_list.rs
fast_forward/src/: lib.rs  list.rs
fast_forward/src/collections/: base.rs  drop.rs  list.rs  mod.rs  one.rs  ro.rs  rw.rs
fast_forward/src/collections/rw/: base.rs  list.rs  list_base.rs  map_base.rs  mod.rs  new_try.rs
fast_forward/src/index/: idx.rs  imap.rs  indices.rs  int.rs  map.rs  mod.rs  ops.rs  store.rs  uint.rs  view.rs
fast_forward/src/index/base/: int.rs  mod.rs  new_filter.rs  uint.rs  view.rs
fast_forward/src/index/ivec/: int.rs  mod.rs  new_filter.rs  options.rs  uint.rs
fast_forward_derive/: Cargo.toml
fast_forward_derive/src/: attr.rs  lib.rs
fast_forward_derive/tests/: first.rs  run.rs  ui_first.rs
fast_forward_derive/tests/ui/: fail_no_index_set.rs  fail_no_index_set.stderr  fail_unnamed_struct.rs  fail_unnamed_struct.stderr
fast_forward_macro/: Cargo.toml
fast_forward_macro/src/: index.rs  lib.rs  list.rs
fast_forward_macro/tests/: func_macro_test.rs
fast_forward_macro/tests/ui/: func_macro_test.rs
fast_forward_macros/: Cargo.toml
fast_forward_macros/src/: index.rs  lib.rs  list.rs
fast_forward_macros/tests/: run.rs
fast_forward_macros/tests/ui/: empty_list.rs  fail_invalid_field.rs  fail_invalid_field.stderr  fail_invalid_store.rs  fail_invalid_store.stderr  func_macro_test.rs  one_indexed_list_filter.rs  one_indexed_list_string.rs  two_lists.rs
src/: error.rs  idea.rs  lib.rs  list.rs  ops.rs  query.rs
src/index/: blo.rs  error.rs  idx.rs  index.rs  map.rs  mod.rs  uint.rs
