[package]
name = "fast-forward"
version = "0.1.0"
edition = "2021"
authors = ["Mario Linke"]
description = "Quering lists blazing fast."
keywords = ["filter", "query", "index", "search", "inmemory", "database", "embedded"]
license = "MIT"
documentation = "https://docs.rs/fast-forward/"
repository = "https://github.com/lima1909/fast-forward"


[dependencies]
roaring = { version = "0.10.1", optional = true }


[features]
default = [ "roaring" ]
roaring = [ "dep:roaring" ]

[dev-dependencies]
criterion = "0.4"

[lib]
bench = false
path  = "./src/lib.rs"

[[bench]]
name = "bench_index"
harness = false
