[package]
name = "fast_forward"
version = "0.0.1"
edition = "2021"
authors = ["Mario Linke"]
description = "Quering lists blazing fast."
license = "MIT"
documentation = "https://docs.rs/fast-forward/"
repository = "https://github.com/lima1909/fast-forward"
keywords = ["filter", "query", "index", "search", "inmemory", "database", "embedded"]
categories = ["data-structures ", "caching ", "embedded"]

include = [
    "src/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[dependencies]

[dev-dependencies]
criterion = "0.4"

[lib]
bench = false
path  = "./src/lib.rs"

[[bench]]
name = "bench_index"
harness = false
