[package]
name = "fast_forward"
version = "0.0.1"
edition = "2021"
authors = ["Mario Linke"]
description = "Quering collections blazing fast."
license = "MIT"
documentation = "https://docs.rs/fast-forward/"
repository = "https://github.com/lima1909/fast-forward"
keywords = ["filter", "query", "index", "search", "inmemory", "database", "embedded"]
categories = ["data-structures ", "caching ", "embedded"]

include = [
    "src/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[dependencies]
hashbrown = { version = "0.14.0", optional = true }

[features]
hashbrown = [ "dep:hashbrown" ]

[dev-dependencies]
rstest = "0.18"
criterion = "0.5"

[lib]
bench = false
path  = "./src/lib.rs"

[[bench]]
name = "bench_index"
harness = false
