[package]
name = "fast_forward"
version = "0.0.3"
edition = "2021"
authors = ["Mario Linke"]
description = "Quering collections blazing fast."
license = "MIT"
documentation = "https://docs.rs/fast_forward/"
repository = "https://github.com/lima1909/fast-forward"
keywords = ["filter", "query", "index", "search", "collection"]
categories = ["data-structures", "caching"]

[dependencies]
hashbrown = { version = "0.14", optional = true }

[features]
hashbrown = [ "dep:hashbrown" ]

[dev-dependencies]
rstest = "0.18"
criterion = "0.5"

[lib]
bench = false
path  = "./src/lib.rs"

[[bench]]
name = "bench_index"
harness = false
