[package]
name = "fast_forward_macros"
version = "0.0.1"
edition = "2021"
authors = ["Mario Linke"]
description = "Macro for creating blazing fast indexed lists."
license = "MIT"
documentation = "https://docs.rs/fast-forward/"
repository = "https://github.com/lima1909/fast-forward"
keywords = ["filter", "query", "index", "search", "inmemory", "database", "embedded"]
categories = ["data-structures ", "caching ", "embedded"]


[lib]
name = "fast_forward_macros"
proc-macro = true

[dependencies]
syn = { version="2.0", features=["extra-traits", "derive", "parsing", "printing"] }
quote = "1.0"
proc-macro2 = "1.0"

# [dev-dependencies]
trybuild = "1.0"
fast_forward = { path = "../fast_forward"}

[[test]]
name = "tests"
path = "tests/run.rs"